Update courses in index.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#education">EDUCATION</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#myCarousel">COURSES</a></li>
+        <li><a href="#courses">COURSES</a></li>
         <li><a href="#skills">SKILLS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -318,8 +318,9 @@
         <p>Yes, San Fran is ours</p>
       </div>
     </div>
-  </div><br>
-  
+  </div>
+ </div>
+ <div id="courses" class="container-fluid text-center bg-grey">
     <h2>COURSES</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
